--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,9 +71,7 @@ body {
     margin: 0 auto;
     max-width: 1440px;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    position: relative;
   }
 
 }
